more writing edits

--- a/project_document.html
+++ b/project_document.html
@@ -2747,11 +2747,11 @@ Treat_{it} + X_{it} \gamma + \nu_{i} + \tau_{t} +
 <p>where <span class="math inline">\(Overdose~Death~Rate_{it}\)</span>
 is deaths attributed to drug overdose per 100,000 county residents for
 county <span class="math inline">\(i\)</span> at time <span class="math inline">\(t\)</span>, <span class="math inline">\(Treat_{it}\)</span> is a binary variable that
-indicates “treatment” status (i.e., Medicaid expansion) for a
-county-year, <span class="math inline">\(X_{it}\)</span> is a vector of
-time varying controls (e.g., median income, median age, male population
-share, racial composition) for potential determinants of overdose death
-rates outside of our policy variation of interest.</p>
+indicates “treatment” status (i.e., enactment of Medicaid expansion) for
+a county-year, <span class="math inline">\(X_{it}\)</span> is a vector
+of time varying controls (e.g., median income, median age, male
+population share, racial composition) for potential determinants of
+overdose death rates outside of our policy variation of interest.</p>
 <p>Additionally, we include an array of county fixed effects, <span class="math inline">\(\nu_{i}\)</span>, that control for unobserved
 time-invariant factors that are specific to individuals counties. An
 example of one such factor would be if, throughout the entire 2012-2015
