--- a/project_slides.html
+++ b/project_slides.html
@@ -9,7 +9,7 @@
 
 
 
-  <meta name="date" content="2022-11-30" />
+  <meta name="date" content="2022-12-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3361,7 +3361,7 @@ ul.task-list{list-style: none;}
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2022-11-30</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2022-12-01</p>
           </hgroup>
   </slide>
 
@@ -3377,21 +3377,23 @@ table, td, th {
 }
 </style>
 
-<slide class=""><hgroup><h2>Research Motivations</h2></hgroup><article  id="research-motivations" class="build">
+<slide class=""><hgroup><h2>Research Motivations</h2></hgroup><article  id="research-motivations" class="smaller build">
+
+<div>
+
+Deaths due to drug overdose are a pressing problem facing United States policymakers and society at large, with reportedly more than 932,000 people dying due to overdose since 1999 (<a href='https://www.cdc.gov/drugoverdose/deaths/index.html' title=''>CDC, 2022</a>).
 
 <div>
 
 <ul>
-<li>Deaths due to drug overdose are a pressing problem facing United States policymakers and society at large, with reportedly more than 932,000 people dying due to overdose since 1999 (<a href='https://www.cdc.gov/drugoverdose/deaths/index.html' title=''>CDC, 2022</a>).
-
-<div></li>
 <li>Rates of overdose deaths increased in nearly every US state from 2013-2017, with particularly severe incidence in the Appalachian region (<a href='https://www.cdc.gov/drugoverdose/deaths/2013-2017-increase.html' title=''>CDC, 2020</a>; <a href='https://www.cdc.gov/drugoverdose/deaths/2014.html' title=''>CDC, 2021</a>).
 
 <div></li>
 <li>The increase in deaths is driven primarily by the ongoing US opioid crisis, with the vast majority (&gt;80%) of overdose deaths associated with opioid use (<a href='https://www.cdc.gov/drugoverdose/deaths/index.html' title=''>CDC, 2022</a>).
 
-<div></li>
-<li><strong>In this context, we hope to assess whether expansion of the social safety net through government policy can be causally linked to reductions in drug overdose death rates.</strong></li>
+<div>
+
+<strong>In this context, we hope to assess whether expansion of the social safety net through government policy can be causally linked to reductions in drug overdose death rates.</strong></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Policy Background</h2></hgroup><article  id="policy-background" class="smaller build">
